--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@toast-ui/editor": "^3.2.2",
     "purecss": "^3.0.0",
     "vue": "^3.2.47"
   },
